--- a/nano/templates/bonfire_lantern.tmpl
+++ b/nano/templates/bonfire_lantern.tmpl
@@ -6,7 +6,7 @@ Used In File(s): \code\modules\core_implant\ritual_book.dm
 {{if data.noimplant}}
 	<div class="itemContentWidest">
 		<div style="text-align: center;">
-			It's a lantern.
+			Why are you staring at a latern? Are you stupid?
 		</div>
 	</div>
 {{else}}
